# signal-MAE

./: .gitignore  CLAUDE.md  README.md  SPEC.md  audiomae.py  audiomaepp.ipynb  data_loaders.py  embeddings_utils.py  fiftyone_visualization.ipynb  plan.md  pyproject.toml  research.md  test_improvements.py
.github/workflows/: tests.yml
checkpoints/audiomae_pretrain_finetune/: config.json
docs/: CI_CD.md  SIGNALMAE_PLAN.md
notebooks/: generate.py
scripts/: generate_rf_dataset.py
src/: __init__.py  config.py  registry.py
src/data/: __init__.py  base.py  custom.py  esc50.py  torchsig.py  torchsig_config.py  torchsig_generator.py
src/embeddings/: __init__.py  cache.py  checkpoint.py  generator.py
src/models/: __init__.py  audiomae.py  base.py  baseline.py  classifier.py  signalmae.py
src/models/blocks/: __init__.py  attention.py  ffn.py  transformer.py
src/training/: __init__.py  losses.py  rf_trainer.py
src/transforms/: __init__.py  audio.py  base.py  rf.py
src/utils/: __init__.py  geo.py  progress.py
tests/: __init__.py  conftest.py  generate_tests.py  test_signalmae.py  test_torchsig.py
