[project]
name = "signal-mae"
version = "2.0.0"
description = "Modular audio/signal machine learning framework with plugin-based architecture for training masked autoencoders"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Louis Aberdeen", email = "louisaberdeen@gmail.com"}
]
keywords = ["audio", "rf", "signals", "machine-learning", "masked-autoencoder", "pytorch", "fiftyone", "torchsig", "modulation-classification"]

dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "einops>=0.7.0",
    "tqdm>=4.65.0",
    "pillow>=10.0.0",
]

[project.optional-dependencies]
audio = [
    "librosa>=0.10.0",
    "scipy>=1.10.0",
]
rf = [
    "torchsig>=0.5.0",
    "scipy>=1.10.0",
]
visualization = [
    "fiftyone>=0.23.0",
    "umap-learn>=0.5.0",
    "matplotlib>=3.7.0",
]
training = [
    "mlflow>=2.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
all = [
    "signal-mae[audio,rf,visualization,training,dev]",
]

[project.urls]
Homepage = "https://github.com/louisaberdeen/signal-MAE"
Repository = "https://github.com/louisaberdeen/signal-MAE"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
